--- a/Cryptography/C3.md
+++ b/Cryptography/C3.md
@@ -20,7 +20,7 @@ for char in chars:
 sys.stdout.write(out)
 ```
 As the description said it was a Custom Cyclical Cipher..it was natural for me to assume that this was the custom part and the hint said"Modern crypto schemes don't depend on 
-the encoder to be secret, but this one does". I ran this python script with the message in the chars place.
+the encoder to be secret, but this one does". I ran this python script with the encrypted message in the chars place.
 
 The output was the letters adlibs. So I tried the flag format picoCTF{adlibs}....and it worked.
 
